--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -32,6 +32,20 @@ body {
 	background-color: @background-color;
 }
 
+/** adds no padding support for columns */
+.col-nopadding {
+   padding-left: 0 !important;
+   padding-right: 0 !important;
+}
+
+/** adds small padding support for columns */
+.col-smallpadding {
+   padding-left: 5px !important;
+   padding-right: 5px !important;
+}
+
+
+
 /** FIX for right dropdown alignment */
 
 .dropdown-align-right .dropdown-menu {
