showing csl tab

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/settings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/settings.jspx
@@ -57,6 +57,8 @@
 			
 			<settings:jabRef command="${command}"/>
 			
+			<settings:csl command="${command}"/>
+			
 			<settings:cv command="${command}"/>
 			
 			<settings:oauth command="${command}"/>
