--- a/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
@@ -18,8 +18,14 @@
 	}
 	
 	.response {
+		text-align: center;
   		margin: 0 20px 5px 20px;
   		padding: 3px 0;
   		border-bottom: 1px solid #ccc;
 	}
+	
+	.tooltip-inner {    
+    	width: 300px;
+    	background-color: @main-color;
+	}	
 }	
