--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/persons.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/persons.jspx
@@ -113,7 +113,7 @@
 									<form action="#">
 										<input type="hidden" name="ckey" value="${ckey}"/>
 										<div id="person-scroll-menu" class='input-group' style="margin-left: auto; width: 100%; margin-right: auto; ">
-											<a class="input-info" href="#" data-toggle="tooltip" title="${searchInfo}"><span class="fa fa-info-circle"></span></a>											
+											<a class="input-info" href="#" data-toggle="tooltip" data-placement="auto" title="${searchInfo}"><span class="fa fa-info-circle"></span></a>											
 											<input class='form-control typeahead' id='searchPersonAutocomplete' type='text' name='searchPersonAutocomplete' autocomplete="off" placeholder='${placeholderText}'/>
 											<!-- 
 											<span class="input-group-btn">
