--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
@@ -96,158 +96,6 @@
 			<script type="text/javascript" src="${resdir}/javascript/bs/bootstrap-table.min.js"><!-- keep me --></script>
 			<link rel="stylesheet" type="text/css" href="${resdir}/css/bootstrap-table.min.css" />
 			
-			<!--TODO: move to CSS file -->
-			<style type="text/css">
-				.bootstrap-table .fixed-table-container {border: none;} 
-				.bootstrap-table .fixed-table-container .table-no-bordered th {border: none;} 
-				.bootstrap-table .fixed-table-container .table-no-bordered td {border: none;} 
-			</style>
-			
-			
-			<style type='text/css'>
-				#personPageAjaxError {
-					display:none;
-				}
-				
-				.page-header .form-group {
-					margin: 0;
-				}
-				
-				.page-header .form-group input {
-					width: auto;
-					display: inline;
-				}
-				
-				.page-header .form-group .personPageEnableForm {
-					font-size: 14px;
-				}
-				
-				
-				.page-header .form-group .twitter-typeahead {
-					display: inline !important;
-				}				
-				
-				.person-search input.typeahead {
-					with: 90%;
-					margin-left: auto;
-					margin-right: auto;
-				}
-						
-							
-				.personPageFormPlaceholder {
-					display: inline-block;
-					padding: 7px 0 0 0;
-				}
-				
-				h1 .personPageFormPlaceholder {
-					display: inline-block;
-					padding: 0;
-				}
-				
-				.personPageFormField { 
-					display: none; 
-					padding: 0; 
-					margin: 0;
-				}
-				
-				.personPageEnableForm {
-					padding: 0 5px 0 0;
-					cursor: pointer;
-				}
-				
-				table.personOtherPublicationTable {
-					table-layout: fixed;
-				}
-				
-				table.personOtherPublicationTable tr:nth-child(even) {
-					background: #eee;
-				}
-				
-				table.personOtherPublicationTable tr:nth-child(odd) {
-					background: #fff;
-				}
-				
-				
-				table.personOtherPublicationTable th:first-child {
-					width: 50%;
-				}
-				
-				table.personOtherPublicationTable th:nth-child(2) {
-					width: 40%;
-				}
-				
-				
-				table.personOtherPublicationTable th:last-child {
-					width: 10%;
-				}
-				
-				table.personOtherPublicationTable > tbody > tr >th {
-					border-bottom: 2px solid #ddd;
-					border-top: none;
-				}
-				
-				table.personOtherPublicationTable td {
-					text-overflow: ellipsis;
-					overflow: hidden;
-					line-height: 19px;
-					height: 19px;
-					white-space: nowrap;
-				}
-				
-				img.person-image {
-					max-width: 128px;
-					max-height: 128px;
-				}
-				
-				#personInfo {
-					margin-bottom: 15px;
-				}
-				
-				#thesisBlock {}
-				
-				.personThesisEntry {}
-				
-				.personPdesc {
-					height: 14px;
-					line-height: 14px;
-					margin: 0;
-					padding: 0;
-				}
-				
-				.pub-person-tab-content .personThesisSeperator:last-of-type {
-					display: none;
-				}
-				
-				.personThesisSeperator {
-					margin: 10px 0 10px 0;
-					border-bottom: 1px solid lightgrey;
-				}
-				
-				#personPageAlternativeNameList .removeName {
-					color: darkred;
-					cursor: pointer;
-				}
-				
-				.personPageVcardLeft {
-					padding: 0;
-					margin: 0;
-				}
-				
-				.personPageVcardLeft > img {
-					margin: 0 !important;
-				}
-				
-				.personPageAdditionalRoleFields {
-					display: none;
-				}
-				
-				a.personPageShowAdditionalRoleFields {
-					position: absolute;
-					right: 5px;
-					top: -13px;
-				}
-				
-			</style>
 			<link rel="stylesheet" type="text/css" href='/resources/typeahead.js/css/typeahead.css'/>
 		</jsp:attribute>
 		
@@ -633,7 +481,7 @@
 			<!-- Other publications -->
 			<c:if test="${fn:length(command.otherPubs) gt 0}">
 				<h3 class="list-headline"><fmt:message key="person.show.otherPub" /></h3>
-				<div id="otherPublications" class="table-responsive">
+				<div id="otherPublications" class="personPageTable table-responsive">
 					<table class="table table-striped personOtherPublicationTable" data-toggle="table">
 						<thead>
 							<tr>
